# performa

./: .coveragerc  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  config-generator.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  tools.rst  usage.rst
doc/source/tools/: performa-report.txt  performa.txt
etc/: performa.conf
performa/: __init__.py
performa/engine/: aggregator.py  ansible_runner.py  config.py  main.py  player.py  report.py  storage.py  utils.py
performa/executors/: __init__.py  base.py  shell.py  sysbench.py
performa/modules/: atop.py  omsimulator.py  shaker_spot.py  sysbench_oltp.py
performa/scenarios/db/: sysbench.rst  sysbench.yaml
performa/scenarios/mq/: kafka.rst  kafka.yaml  omsimulator-ha-call.rst  omsimulator-ha-call.yaml  omsimulator-ha-cast.rst  omsimulator-ha-cast.yaml  omsimulator-ha-notify.rst  omsimulator-ha-notify.yaml  omsimulator-threading.rst  omsimulator-threading.yaml  omsimulator.rst  omsimulator.yaml  rabbitmq-ha-call.rst  rabbitmq-ha-call.yaml  rabbitmq-ha-cast.yaml  rabbitmq-ha-notify.rst  rabbitmq-ha-notify.yaml  rabbitmq.yaml
performa/scenarios/net/: shaker-spot.rst  shaker-spot.yaml
performa/tests/: atop_sample.txt  omsimulator_sample.txt  test_atop.py  test_omsimulator.py  test_performa.py  test_sysbench.py  test_utils.py
