[metadata]
name = performa
summary = Performance testing toolkit
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://github.com/openstack/performance-docs
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    performa

[entry_points]
console_scripts =
    performa = performa.engine.main:main
    performa-report = performa.engine.report:main

oslo.config.opts =
    oslo_log = oslo_log._options:list_opts
    performa.engine.config = performa.engine.config:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = performa/locale
domain = performa

[update_catalog]
domain = performa
output_dir = performa/locale
input_file = performa/locale/performa.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = performa/locale/performa.pot
